Fix info panel position and visibility

--- a/src/ggrc/assets/stylesheets/_pin.scss
+++ b/src/ggrc/assets/stylesheets/_pin.scss
@@ -11,10 +11,10 @@
   @include box-shadow(0 0 5px rgba(0,0,0, 0.3));
   position: fixed;
   bottom: 40px;
-  left: 32px;
-  right: 32px;
+  left: 27px;
+  right: 27px;
   background: $white;
-  z-index: 0;
+  z-index: 1000;
   overflow: auto;
   .info {
     @include box-shadow(none);
